Fixed zoom overflow in Firefox

--- a/css/main.css
+++ b/css/main.css
@@ -60,31 +60,6 @@
   box-sizing: border-box;
 }
 
-@media (min-width: 320px) {
-  html {
-    zoom: 1.25;
-    -moz-transform: scale(1.25);
-  }
-}
-@media (min-width: 400px) {
-  html {
-    zoom: 1.5;
-    -moz-transform: scale(1.5);
-  }
-}
-@media (min-width: 576px) {
-  html {
-    zoom: 1.75;
-    -moz-transform: scale(1.75);
-  }
-}
-@media (min-width: 768px) {
-  html {
-    zoom: 2;
-    -moz-transform: scale(2);
-  }
-}
-
 html, body {
   display: grid;
   height: 100%;
@@ -112,6 +87,31 @@ form {
   box-shadow: var(--box-shadow);
   display: grid;
   grid-template-columns: 1fr auto 1fr;
+}
+
+@media (min-width: 320px) {
+  form {
+    zoom: 1.25;
+    -moz-transform: scale(1.25);
+  }
+}
+@media (min-width: 400px) {
+  form {
+    zoom: 1.5;
+    -moz-transform: scale(1.5);
+  }
+}
+@media (min-width: 576px) {
+  form {
+    zoom: 1.75;
+    -moz-transform: scale(1.75);
+  }
+}
+@media (min-width: 768px) {
+  form {
+    zoom: 2;
+    -moz-transform: scale(2);
+  }
 }
 
 input, button, span {
